# kinectx

./: .gitignore  CMakeLists.txt  README.md
src/: probe.c  usb.c  usb.h
